<?xml version="1.0"?>
<package format="2">
  <name>ft_sensor_ros</name>
  <version>0.1.0</version>
  <description>ROS1 node publishing ATI Axia F/T data as geometry_msgs/WrenchStamped.</description>

  <maintainer email="robotics@todo.todo">robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

  <export/>
</package>
